--- a/Commander/appsettings.json
+++ b/Commander/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CommanderConnection": "Server=DESKTOP-5JNPE0U\\SQLEXPRESS;Database=CommanderDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
